fix Home title z-index

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -18,7 +18,7 @@
 }
 
 .Home_Section p {
-  z-index: 1000;
+  z-index: 900;
   color: #fff;
   font-size: 60px;
   position: relative;
